infra/k8s/frontend/000-prod/001-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fk-frontend-prod
spec:
  selector:
    matchLabels:
      app: fk-frontend-prod
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: fk-frontend-prod
    spec:
      containers:
      - name: fk-frontend-prod
        image: toresbe/fk-frontend:0.0.1
        imagePullPolicy: Always
        ports:
          - name: web
            containerPort: 3000
