infra/k8s/frontend/000-prod/003-ingress.yaml
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: fk-http-recirect
  namespace: default
spec:
  entryPoints: 
    - web
  routes:
  - match: Host(`www.frikanalen.no`) || Host(`frikanalen.no`)
    priority: 100
    kind: Rule
    services:
    - kind: Service
      name: fk-frontend-prod
      scheme: http
      port: 3000
    middlewares:
      - name: redirect-to-https
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: fk-frontend-prod-https
  namespace: default
spec:
  entryPoints: 
    - websecure
  routes:
  - match: Host(`www.frikanalen.no`) || Host(`frikanalen.no`)
    kind: Rule
    services:
    - kind: Service
      name: fk-frontend-prod
      scheme: http
      port: 3000
  tls:
    certResolver: default
